tests/ui/transmutability/issue-101739-2.stderr
error[E0107]: trait takes at most 2 generic arguments but 5 generic arguments were supplied
  --> $DIR/issue-101739-2.rs:17:14
   |
LL |           Dst: BikeshedIntrinsicFrom<
   |                ^^^^^^^^^^^^^^^^^^^^^ expected at most 2 generic arguments
LL |               Src,
LL |               ASSUME_ALIGNMENT,
   |  _____________________________-
LL | |             ASSUME_LIFETIMES,
LL | |             ASSUME_VALIDITY,
LL | |             ASSUME_VISIBILITY,
   | |_____________________________- help: remove the unnecessary generic arguments

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0107`.
